Fixed some alignment CSS issues

--- a/time-clock-project/src/App.css
+++ b/time-clock-project/src/App.css
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: space-around;
   text-align: center;
-  min-width: 100vw;
+  min-width: 100%;
   min-height: 100vh;
 }
 
@@ -17,6 +17,6 @@
   min-width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
